<resources>
    <string name="app_name">Coconut\'s\nAdventure</string>
    <string name="titulo">Coconut\'s\nAdventure</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="music_header">Music</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="music_title">Turn Music on</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="name_title">Your Name</string>
    <string name="Options_header">Settings</string>
    <string name="language_title">Language</string>
    <string name="sync_header">Sync</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
</resources>